Contrast daemon/no-daemon for a Timer's backing thread